# CS50

./: .gitignore  CMakeLists.txt  README.md
PSET1/: CMakeLists.txt  credit.c  greedy.c  mario.c  mario_more.c  water.c
PSET2/: CMakeLists.txt  caesar.c  crack.c  initials.c  initials_more.c  vigenere.c
PSET3/: CMakeLists.txt
PSET3/fifteen/: CMakeLists.txt  fifteen.c  questions.txt
PSET3/find_less/: CMakeLists.txt  generate.c  helpers.c  helpers.h
PSET3/find_more/: CMakeLists.txt  find.c  helpers.c  helpers.h
PSET4/: CMakeLists.txt
PSET4/bmp/: CMakeLists.txt  questions.txt  resize.c  resize_less.c  whodunit.c
PSET4/jpg/: CMakeLists.txt  recover.c
PSET5/: CMakeLists.txt  dictionary.c
PSET5/old/: CMakeLists.txt  questions.txt  staff.txt  student.txt
PSET5/trie/: CMakeLists.txt  dictionary.c  dictionary.h  speller  speller.c
PSET6/: caesar.py  crack.py  credit.py  greedy.py  mario_less.py  mario_more.py  vigenere.py
PSET6/sentiments/: analyzer.py  application.py  helpers.py  smile  tweets
PSET6/sentiments/templates/: index.html  layout.html  search.html
PSET7/finance/: application.py  finance.db  helpers.py  requirements.txt
PSET7/finance/static/: styles.css
PSET7/finance/templates/: apology.html  buy.html  history.html  index.html  layout.html  login.html  quote.html  quoted.html  register.html  sell.html  settings.html
PSET8/mashup/: application.py  helpers.py  requirements.txt
PSET8/mashup/static/: scripts.js  styles.css
PSET8/mashup/templates/: index.html
lib/: LICENSE.md  README.md  cs50.c  cs50.h
