add_executable(credit credit.c)
target_link_libraries(credit cs50)

add_executable(greedy greedy.c)
target_link_libraries(greedy cs50)

add_executable(hello hello.c)
target_link_libraries(hello cs50)

add_executable(mario mario.c)
target_link_libraries(mario cs50)

add_executable(mario_more mario_more.c)
target_link_libraries(mario_more cs50)

add_executable(water water.c)
target_link_libraries(water cs50)
