add_executable(caesar caesar.c)
target_link_libraries(caesar cs50)

add_executable(crack crack.c)
target_link_libraries(crack cs50)

add_executable(initials initials.c)
target_link_libraries(initials cs50)

add_executable(initials_more initials_more.c)
target_link_libraries(initials_more cs50)

add_executable(vigenere vigenere.c)
target_link_libraries(vigenere cs50)
